@@ -4,6 +4,7 @@
 
 * Removed VERSION files. This prevent problems described here: http://github.com/nex3/haml/issues/issue/24
 * Added default values for controllers
+* Updated sequel generation to work with sqlite3.
 
 == 0.9.9
 
